@@ -8,7 +8,7 @@
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = favicon_link_tag       "favicons/manager.ico"
     
-    = javascript_include_tag 'https://cloud.tinymce.com/stable/tinymce.min.js'
+    = javascript_include_tag 'https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=j0jfdeutcz3d3cdm7ihxx226r9jz1674riy5nvi21cesxpbt'
 
     = csrf_meta_tags
     %meta{ :name => "viewport", :content => "width=device-width, initial-scale=1.0" }
